<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">蓝牙聊天</string>
    <string name="app_soft">软件：</string>
 	<string name="app_item_name">已安装软件：</string>

    <string name="send">发送</string>
    <string name="not_connected">你没有连接设备......</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用,离开蓝牙聊天!</string>
    <string name="title_connecting">连接中...</string>
    <string name="title_connected_to">连接设备: </string>
    <string name="title_not_connected">没有连接</string>

    <string name="title_search">搜索设备</string>
    <string name="title_cancle">取消</string>
    <string name="title_ok">确定</string>
    
    <string name="title_unfound">未找到蓝牙设备</string>
    <string name="title_found">已找到蓝牙设备</string>
    <string name="title_unuse">本机蓝牙设备不可用</string>
    <string name="title_bound">已经配对的设备</string>
       
    <string name="title_tip">提示</string>
    <string name="title_send">确定发送到 %1$s 设备？</string>
    <string name="title_searching">正在找寻设备，请稍等...</string>
    <string name="title_sending">已经启动发送，正在发送，请用手机接受..</string>
    <string name="title_send_fail">发送失败，请重试！</string>
    <string name="title_apk_nofound">无法找到apk文件，请重新安装</string>
 
    <string name="scanning">扫描设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有配对过,请配对!</string>
    <string name="none_found">没有找到设备~</string>
    <string name="title_paired_devices">配对设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">扫描设备</string>


    <string name="connect">连接设备</string>
    <string name="discoverable">允许被搜索</string>
    <string name="file">发送文件</string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
	<string name="cancel">取消</string>
	<string name="exit_message">程序退出</string>
	<string name="about_message">欢迎使用蓝牙聊天！  \n作者：郑伟山 \n前研工作室</string>
	<string name="about">关于我们</string>
</resources>
